[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/textures/npc/boss/captain_vor/captain_vor_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/npc/boss/captain_vor/captain_vor_walk.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/npc/boss/captain_vor/captain_vor_charge_beam.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/npc/boss/captain_vor/captain_vor_attack.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/bossfight/oof.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/bossfight/bonk.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/scripts/npc/CaptainVor.gd" type="Script" id=7]
[ext_resource path="res://assets/scripts/npc/VorStateMachine.gd" type="Script" id=8]
[ext_resource path="res://assets/textures/npc/boss/captain_vor/force_field.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "charge_start",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "charge_loop",
"speed": 5.0
} ]

[sub_resource type="Animation" id=23]
resource_name = "melee"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BatonHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../BatonHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -16, -16 ), Vector2( -24, -8 ), Vector2( -32, 0 ), Vector2( -32, 8 ) ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 32.0

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 16, 24 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 384, 96 )

[node name="CaptainVor" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 19 )
animation = "attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
playback_process_mode = 0
anims/melee = SubResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 27 )

[node name="ForceField" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceField"]
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="ForceField"]
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="BatonHitbox" type="Area2D" parent="."]
position = Vector2( -16, -16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BatonHitbox"]
shape = SubResource( 22 )
disabled = true

[node name="MeleeRange" type="Area2D" parent="."]
position = Vector2( -32, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeRange"]
shape = SubResource( 24 )

[node name="DetectionRange" type="Area2D" parent="."]
position = Vector2( 0, -48 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 26 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 8 )

[node name="BatonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.4, 0.4 )
limit_left = 4384
limit_top = 1824
limit_right = 5184
limit_bottom = 2240
smoothing_enabled = true
smoothing_speed = 3.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="ChargeUpTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="ForceField" to="." method="_on_ForceField_area_entered"]
[connection signal="body_entered" from="BatonHitbox" to="." method="_on_BatonHitbox_body_entered"]
[connection signal="body_entered" from="MeleeRange" to="." method="_on_MeleeRange_body_entered"]
[connection signal="body_exited" from="MeleeRange" to="." method="_on_MeleeRange_body_exited"]
